--- a/templates/index.html
+++ b/templates/index.html
@@ -1,36 +1,55 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="{{url_for('static',filename='style/style.css')}}">
+	<!-- <link rel="stylesheet" type="text/css" href="{{url_for('static',filename='style/style.css')}}"> -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+	<title>brocr</title>
 </head>
 <body>
 
-<h1>brocr</h1>
+	<nav class="navbar navbar-expand-sm bg-primary navbar-dark">
+		<a class="navbar-brand" href="#">brocr</a>
 
-<div class="imagediv">
-	<img src="{{url_for('static',filename='blank.png')}}" width=100% id="image_file">
-	<input type="file" id="img_input" accept="image/jpeg, image/png" onchange="change_img(this);">
-	<button id="process">Process</button>
-</div>
+		<ul class="navbar-nav">
+		    <!-- <li class="nav-item">
+		      <a class="nav-link" href="">Home</a>
+			</li> -->
+		</ul>
+		<button class="btn btn-info" id="navbar_what">What is this?</button>
+		<button class="btn btn-info" id="navbar_howto">How does it works</button>
+	</nav>
 
-<div class="textdiv">
-	<form action="/submit" id="submit_form">
-	Event Name:<br>
-	<input type="text" name="event_name" value="Mickey" id="event_id"><br><br>
-	Start Time:<br>
-	<input type="text" name="start_time" value="Mouse" id="start_id"><br><br>
-	End Time:<br>
-	<input type="text" name="end_time" value="Mickey" id="end_id"><br><br>
-	Date:<br>
-	<input type="text" name="date" value="Mouse" id="date_id"><br><br>
-	Location:<br>
-	<input type="text" name="location" value="Mickey" id="location_id"><br><br>
-	Description:<br>
-	<input type="text" name="description" value="Mouse" id="desc_id"><br><br>
-	<input type="submit" value="Submit">
-	</form>
-	<p id="event_link"></p>
-</div>
+	<div class="container">
+		<br><br>
+		<div class="row">
+			<div class="col-md-6">
+				<img src="{{url_for('static',filename='blank.png')}}" class="img-fluid" id="image_file">
+				<input type="file" id="img_input" accept="image/jpeg, image/png" onchange="change_img(this);">
+				<button id="process">Process</button>
+			</div>
+			<div class="col-md-6">
+				<form action="/submit" id="submit_form">
+				Event Name:<br>
+				<input type="text" name="event_name" value="" id="event_id"><br><br>
+				Start Time:<br>
+				<input type="text" name="start_time" value="" id="start_id"><br><br>
+				End Time:<br>
+				<input type="text" name="end_time" value="" id="end_id"><br><br>
+				Date:<br>
+				<input type="text" name="date" value="" id="date_id"><br><br>
+				Location:<br>
+				<input type="text" name="location" value="" id="location_id"><br><br>
+				Description:<br>
+				<input type="text" name="description" value="" id="desc_id"><br><br>
+				<input type="submit" value="Submit">
+				</form>
+				<p id="event_link"></p>
+			</div>
+		</div>
+		<br><br><br>
+	</div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script>
@@ -56,6 +75,14 @@
 					$("#desc_id").val(data['description']);
 				}
 			});
+		})
+
+		$("#navbar_what").click(function(){
+			alert("Hello and welcome to brocr \n\nThis program takes the input of a brochure image, then it scans through all the things to find important information \n\nThese information are then linked to Google Calendar so you won't miss the event!")
+		})
+
+		$("#navbar_howto").click(function(){
+			alert("1. Place image in brocr/static folder \n2. Choose image\n3. Click process\n4. Edit the information if needed\n5. Click submit\n\nNote: If you are using this for the first time, you need to login first after clicking submit. There will be a pop up window to authenticate so this app can connect to your Google Calendar.")
 		})
 
 		$("#submit_form").submit(function(e){
